# ai_agent

./: Dockerfile  README.md  app.py  auth.db  backtest.py  main.py  pyproject.toml  requirements.txt
auth/: routes.py
backtest_result/: content_result.csv  image_result.csv  latest_result.csv  qa_result.csv
notebook/: ai_agent.ipynb
src/components/: agent.py  graph.py  model.py  node.py  tools.py
src/config/: config.py
